# dotpack

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  dotpack  go.mod  go.sum  main.go  versions.env
.github/workflows/: ci.yml  release.yml  update-check.yml
bundle/: BUILD.bazel
cmd/: BUILD.bazel  autoupdate.go  build.go  clean.go  install.go  ls.go  push.go  status.go  upgrade.go  wrapper_test.go
config/nvim/: init.lua  nvim-pack-lock.json
config/nvim/lua/: editor.lua  keymaps.lua  lsp.lua  plugins.lua  treesitter.lua  ui.lua
internal/archive/: BUILD.bazel  archive.go  archive_test.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/docker/: BUILD.bazel  docker.go
internal/download/: BUILD.bazel  download.go
internal/nvimplugins/: BUILD.bazel  nvimplugins.go  nvimplugins_test.go
internal/platform/: BUILD.bazel  platform.go  platform_test.go
internal/ssh/: BUILD.bazel  ssh.go
internal/versions/: BUILD.bazel  versions.go  versions_test.go
linux/: BUILD.bazel  Dockerfile.base  assemble.sh  defs.bzl
linux/scripts/: build_btop.sh  build_git.sh  build_htop.sh  build_make.sh  build_nvim.sh  build_zsh.sh
scripts/: BUILD.bazel  download-binaries.sh  install.ps1  install.sh
tools/: BUILD.bazel  extensions.bzl  sync_versions_bzl.sh  versions.bzl  versions_ext.bzl  versions_sync_test.sh  workspace_status.sh
