# Bundle assembly — collects all tools into a single target.
#
# Usage:
#   bazel build //bundle:all              # All tool targets
#   bazel build //bundle:prebuilt         # Pre-built binaries only
#   bazel build //bundle:source_built     # Source-compiled tools only
#   bazel build //bundle:shell_assets     # Plugins and shell scripts only

filegroup(
    name = "prebuilt",
    srcs = [
        "//third_party/age",
        "//third_party/age:age-keygen",
        "//third_party/bat",
        "//third_party/delta",
        "//third_party/direnv",
        "//third_party/dust",
        "//third_party/fd",
        "//third_party/fzf",
        "//third_party/go_sdk",
        "//third_party/jq",
        "//third_party/lazygit",
        "//third_party/nvim",
        "//third_party/rg",
        "//third_party/zig",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "source_built",
    srcs = [
        "//third_party/btop",
        "//third_party/eza",
        "//third_party/git",
        "//third_party/htop",
        "//third_party/make:gnumake",
        "//third_party/ncurses",
        "//third_party/zsh",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "shell_assets",
    srcs = [
        "//third_party/bat_extras",
        "//third_party/eza:theme",
        "//third_party/fzf:shell",
        "//third_party/zsh_plugins:autosuggestions",
        "//third_party/zsh_plugins:fast_syntax_highlighting",
        "//third_party/zsh_plugins:history_substring_search",
        "//third_party/zsh_plugins:powerlevel10k",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "all",
    srcs = [
        ":prebuilt",
        ":shell_assets",
        ":source_built",
        "//:devlayer",
    ],
    visibility = ["//visibility:public"],
)
