load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/stefanpenner/devlayer/internal/config",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_burntsushi_toml//:toml"],
)

go_test(
    name = "config_test",
    srcs = ["config_test.go"],
    embed = [":config"],
)
