load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "versions",
    srcs = ["versions.go"],
    importpath = "github.com/stefanpenner/devlayer/internal/versions",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "versions_test",
    srcs = ["versions_test.go"],
    embed = [":versions"],
)
